name:                   jailbreak-cabal
version:                1.3.6
synopsis:               Strip version restrictions from Cabal files
description:            Strip version restrictions from build dependencies in Cabal files.
category:               Distribution
stability:              stable
homepage:               https://github.com/NixOS/jailbreak-cabal
bug-reports:            https://github.com/NixOS/jailbreak-cabal/issues
author:                 Peter Simons, Jeremy Shaw, Joel Taylor, Kosyrev Serge, Nikolay Amiantov, aszlig
maintainer:             sternenseemann@systemli.org
license:                BSD3
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.10

source-repository head
  type: git
  location: https://github.com/NixOS/jailbreak-cabal

executable jailbreak-cabal
  main-is: Main.hs
  -- for Cabal < 3.7, the Cabal-syntax dummy package will be used
  build-depends: base < 5, Cabal == 3.*, Cabal-syntax
  default-language: Haskell2010
